tools/fleet/fixtures/packets/invalid/missing-artifact-checksum.case
source=valid-worker-final.packet
mutation=remove Artifact-SHA256
expected=invalid
